# fastcontext-mcp

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.zh-TW.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  install.ps1  install.sh  lessons.md  notice.md  uninstall.ps1  uninstall.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.opencode/plans/: completion-plan.md  fastcontext-hardening-plan.md
docs/: design-inline-agent-loop.md  prompt-reference.md
examples/: opencode.jsonc
scripts/: run_llama_fastcontext_rl.ps1  run_llama_fastcontext_rl.sh  run_sglang_fastcontext_rl.ps1  run_sglang_fastcontext_rl.sh
src/: main.rs
