[package]
name = "fastcontext-mcp-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local MCP stdio wrapper for Microsoft FastContext CLI and FastContext-1.0-4B-RL"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt", "time"] }
