[package]
name = "fastcontext-mcp-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local MCP stdio server with built-in LLM agent loop for FastContext-1.0-4B-RL repository exploration"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
glob = "0.3"
regex = "1"
